@@ -1,6 +1,16 @@
 # ChangeLog for sys-libs/timezone-data
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-libs/timezone-data/ChangeLog,v 1.269 2012/05/16 21:58:46 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-libs/timezone-data/ChangeLog,v 1.271 2012/08/03 15:49:09 vapier Exp $
+
+*timezone-data-2012e (03 Aug 2012)
+
+  03 Aug 2012; Mike Frysinger <vapier@gentoo.org> +timezone-data-2012e.ebuild:
+  Version bump.
+
+*timezone-data-2012d (20 Jul 2012)
+
+  20 Jul 2012; Mike Frysinger <vapier@gentoo.org> +timezone-data-2012d.ebuild:
+  Version bump.
 
   16 May 2012; Mike Frysinger <vapier@gentoo.org> timezone-data-2012c.ebuild:
   Update HOMEPAGE/SRC_URI to include new IANA site #416311 by Larry Gilbert.
